// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`description > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_31__1yhcak825"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_captionSmall__1yhcak8q style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with aria-describedby 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div>
      <label
        class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        id="id-label"
      >
        Label
      </label>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_captionSmall__1yhcak8q style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="id-helper"
        role="status"
      >
        helper
      </span>
      <input
        aria-describedby="id-helper"
        aria-labelledby="id-label"
        data-testid="test-input"
        type="text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`description > renders correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
      id="id"
      role="status"
    >
      Error
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with error disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_12__1yhcak81m"
      id="id"
      role="status"
    >
      Error
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with error true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
      id="id"
      role="status"
    >
      helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with helper ReactNode 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
      id="id"
      role="status"
    >
      <div>
        Helper
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with helper string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with success string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_success__1yhcak8e style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_56__1yhcak82u"
      id="id"
      role="status"
    >
      Success
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with success string disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_default__1yhcak84 style_sentiment_success__1yhcak8e style_variant_caption__1yhcak8p style_undefined_compound_20__1yhcak81u"
      id="id"
      role="status"
    >
      Success
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with success true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_success__1yhcak8e style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_56__1yhcak82u"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders errors when helper, error and sucess are defined 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
      id="id"
      role="status"
    >
      error
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders success when helper and sucess are defined 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_success__1yhcak8e style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_56__1yhcak82u"
      id="id"
      role="status"
    >
      success
    </span>
  </div>
</DocumentFragment>
`;
